# data-playbook

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  poetry.toml  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.cfg.old  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
dataplaybook/: __init__.py  __main__.py  config_validation.py  const.py  data.py  helper.py  loader.py  main.py  playbook.py  task.py  templates.py  utils.py
dataplaybook/everything/: __init__.py
dataplaybook/helpers/: __init__.py  args.py  env.py
dataplaybook/tasks/: __init__.py  all.py  fnb.py  fuzzy.py  gis.py  ietf.py  io_mail.py  io_misc.py  io_mongo.py  io_oauth.py  io_pdf.py  io_pptx.py  io_xlsx.py  io_xml.py  jmespath.py  templates.py
dataplaybook/tasks/aio_oauth/: __init__.py  oauth_server.py
dataplaybook/tasks/io_oauth/: __init__.py  oauth_server.py  oauth_session.py
dataplaybook/utils/: __init__.py  logger.py
src/dataplaybook/: __init__.py  __main__.py  const.py  everything.py  helper.py  main.py
src/dataplaybook/helpers/: args.py  env.py  typeh.py  types.py
src/dataplaybook/tasks/: __init__.py  aio_mongo.py  all.py  fnb.py  fuzzy.py  gis.py  ietf.py  io_mail.py  io_misc.py  io_mongo.py  io_pdf.py  io_pptx.py  io_xlsx.py  io_xml.py
src/dataplaybook/utils/: __init__.py  ensure.py  lists.py  logger.py
src/dataplaybook/utils/parser/: __init__.py  convert.py  parse.py
src/tests/: __init__.py  conftest.py  test_config_validation.py  test_everything.py  test_helper.py  test_main.py
src/tests/helpers/: test_env.py  test_types.py
src/tests/tasks/: test_all.py  test_gis.py  test_ietf.py  test_init.py  test_io_mail.py  test_io_misc.py  test_io_mongo.py  test_io_pdf.py  test_io_pptx.py  test_io_xlsx.py
src/tests/utils/: test_ensure.py  test_init.py  test_lists.py
src/tests/utils/parser/: test_convert.py  test_init.py  test_parse.py
tests/: common.py  conftest.py  test_config_validation.py  test_data.py  test_everything.py  test_helper.py  test_loader.py  test_main.py  test_playbook.py  test_task.py  test_utils.py
tests/helpers/: test_env.py  test_types.py
tests/tasks/: __init__.py  test_all.py  test_gis.py  test_ietf.py  test_init.py  test_io_mail.py  test_io_misc.py  test_io_mongo.py  test_io_pdf.py  test_io_pptx.py  test_io_xlsx.py  test_jmespath.py  test_templates.py
tests/tasks/aio_oauth/: test_oauth_server.py
tests/utils/: test_ensure.py  test_init.py  test_lists.py
tests/utils/parser/: __init__.py  test_convert.py  test_parse.py
