[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10,<0.12" ]

[project]
name = "dataplaybook"
version = "1.2.16"
description = "Playbooks for data. Open, process and save table based data."
readme = "README.md"
keywords = [ "data", "excel", "generators", "mongodb", "tables" ]
license = { file = "LICENSE" }
authors = [ { name = "Johann Kellerman", email = "kellerza@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "cattrs>=24,<27",
  "colordict>=1.2.6",
  "colorlog>=6,<7",
  "fuzzywuzzy",
  "icecream",
  "jinja2>=3,<4",
  "office365-rest-python-client>2,<3",
  "openpyxl==3.1.5",
  "python-levenshtein",
  "requests>=2,<3",
  "rumdl>=0.2.16",
  "typeguard>=4,<5",
  "whenever>=0.10,<0.11",
]
optional-dependencies.all = [ "lxml>=5.4,<7", "motor>=3,<4", "pymongo>=4,<5", "python-pptx" ]
optional-dependencies.mongo = [ "motor>=3,<4", "pymongo>=4,<5" ]
urls.Homepage = "https://github.com/kellerza/data-playbook"
urls.Repository = "https://github.com/kellerza/data-playbook"
scripts.dataplaybook = "dataplaybook.__main__:main"

[dependency-groups]
dev = [
  "codespell",
  "pyproject-fmt",
  "pytest",
  "pytest-aiohttp",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "python-semantic-release",
  "types-lxml",
  "types-openpyxl>=3.1.5.20250919",
  "types-requests",
  "zuban>=0.6",
]

[tool.uv]
build-backend.source-exclude = [ ".mypy_cache" ]  # , "src/tests"]

[tool.ruff]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true
lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  "D",     # pydocstyle
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PTH",   # flake8-pathlib
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
lint.ignore = [ "D203", "D213", "E203", "E501", "PLC0415", "PLR2004", "UP047" ]
lint.isort.no-lines-before = [ "future", "standard-library" ]
lint.pylint.max-args = 7
lint.pylint.max-branches = 20
lint.pylint.max-returns = 15

[tool.codespell]
skip = [ "**/node_modules/*", "*.csv", "*.json", "./s2-js/dist/*", "build/*" ]

[tool.pytest]
ini_options.pythonpath = [ "src/dataplaybook" ]
ini_options.norecursedirs = [ ".git", "modules" ]
ini_options.addopts = "--cov=src --cov-report xml:cov.xml"
ini_options.filterwarnings = "ignore:.+@coroutine.+deprecated.+"
ini_options.log_cli = true
ini_options.log_cli_level = "DEBUG"
ini_options.asyncio_default_fixture_loop_scope = "function"
ini_options.asyncio_mode = "auto"

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
build_command = "pip install uv && uv build"
commit_parser = "emoji"
commit_parser_options.major_tags = [ ":boom:" ]
commit_parser_options.minor_tags = [ ":rocket:" ]
commit_parser_options.patch_tags = [ "" ]
# https://python-semantic-release.readthedocs.io/en/latest/multibranch_releases.html#configuring-multibranch-releases
branches.main.match = "main"
commit = true
commit_version_number = true
tag = true
vcs_release = true

[tool.zuban]
mypy_path = [ "src" ]
warn_unreachable = false

[tool.rumdl]
exclude = [ "CHANGELOG.md" ]
include = [ "**/*.md", "**/*.mdc" ]
respect-gitignore = true
extend-enable = [ "MD060" ]  # table formatting
MD013.severity = "info"
MD013.line-length = 100
MD013.code_blocks = false
MD013.tables = false
MD013.reflow = true
MD013.reflow-mode = "normalize"
MD033.allowed-elements = [ "br", "i-mdi-dev-to" ]
