[metadata]
name         = dataplaybook
description  = Playbooks for data. Open, process and save table based data.
license      = Apache License 2.0
license_file = LICENSE
author       = Johann Kellerman
author_email = kellerza@gmail.com
url          = https://github.com/kellerza/data-playbook
platforms    = any
python_requires = >=3.5.3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
zip_safe = False

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
norecursedirs = .git
log_cli = True
log_cli_level = DEBUG

# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
