[metadata]
name         = dataplaybook
version      = attr: dataplaybook.const.VERSION
description  = Playbooks for data. Open, process and save table based data.
long_description = file: README.md
long_description_content_type = text/markdown
url          = https://github.com/kellerza/data-playbook
author       = Johann Kellerman
author_email = kellerza@gmail.com
license      = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = data, tables, excel, mongodb, generators

[options]
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    colorlog
    attrs>=21
    voluptuous>=0.11.5
    jinja2>=3,<4
    openpyxl>=3,<4
    typeguard>=2,<3
    icecream
    fuzzywuzzy
    python-Levenshtein
    requests>=2.0.0
zip_safe = False

[options.entry_points]
console_scripts =
    dataplaybook = dataplaybook.__main__:main

[options.extras_require]
mongodb =
    pymongo
pptx =
    python-pptx
    colordict
tests=
    pytest
    pytest
    pytest-aiohttp
    pytest-cov
    pytest-github-actions-annotate-failures
    O365>=1.0.4,<2
    bottle

[options.packages.find]
exclude =
    tests

# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[tool:pytest]
testpaths = tests
norecursedirs = .git testing_config
log_cli = True
log_cli_level = DEBUG

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
ignore =
    E501,
    W503,
    E203,
    D202

[isort]
profile=black

[mypy]
python_version = 3.6
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = silent
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
